--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,38 +1,24 @@
-@use '../../styles/variables' as v;
-
 .App {
-	text-align: center;
-
-	&-logo {
-		height: 40vmin;
-		pointer-events: none;
-
-		@media (prefers-reduced-motion: no-preference) {
-			animation: App-logo-spin infinite 20s linear;
-		}
-	}
-
-	&-header {
-		background-color: v.$color-bg;
-		min-height: 100vh;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		font-size: calc(10px + 2vmin);
-		color: v.$color;
-	}
-
-	&-link {
-		color: v.$color-primary;
-	}
+  text-align: center;
+  min-height: 100vh;
+  background-color: #0ac3a7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+.darkMode {
+  background-color: #282c34;
+}
+
+button {
+  margin-top: 2em;
+  padding: 0.5em 1em;
+  border: none;
+  border-radius: 4px;
+  font-size: 0.6em;
+  cursor: pointer;
 }
